--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <model-viewer
     id="modelViewer"
-    src="assets/jubin_270.glb"
+    src="assets/sunny.glb"
     ios-src="assets/jubin_270.usdz"
     alt="Ein 3D-Modell"
     ar
