--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <model-viewer
     id="modelViewer"
     src="assets/sunny.glb"
-    ios-src="assets/jubin_270.usdz"
+    ios-src="assets/sunny_s.usdz"
     alt="Ein 3D-Modell"
     ar
     ar-modes="scene-viewer quick-look webxr"
